@startuml
class Universidade {
    -curriculos: List<Curriculo>
}

class Curriculo {
    -cursos: List<Curso>
}

class Curso implements Credito {
    -nome: String
    -creditos: int
    -cargaHoraria: int
    -disciplinas: List<Disciplina>
}

class Disciplina implements Credito {
    -nome: String
    -numeroMinimoAlunos: int
    -numeroMaximoAlunos: int
    -cargaHoraria: int
    -status: String
    -professorResponsavel: Professor
    -alunosInscritos: List<Aluno>
    -preRequisitos: List<Disciplina>
    -coRequisitos: List<Disciplina>
}

interface Usuario {
    -nome: String
    -senha: String
}

class Aluno implements Usuario {
    -nome: String
    -senha: String
    -curso: Curso
    -matriculas: List<Matrícula>
}

class Professor implements Usuario {
    -nome: String
    -senha: String
    -disciplinas: List<Disciplina>
    +visualizarMatriculas(disciplina: Disciplina): List<Aluno>
}

class Secretaria implements Usuario {
    -nome: String
    +gerirCurriculoSemestral(curriculo: Curriculo)
    +notificarCobranca(aluno: Aluno, semestre: String)
}

class Matrícula {
    -dataMatricula: Date
    -disciplina: Disciplina
    -aluno: Aluno
}

class Turma {
    -ano: int
    -semestre: int
    -disciplina: Disciplina
    -professor: Professor
}

interface Credito {
    -cargaHoraria: int
}

Universidade "1" -- "1" Curriculo
Secretaria "1" -- "0..*" Curriculo
Curriculo "1" -- "0..*" Curso
Curso "1" -- "0..*" Disciplina
Disciplina "1" -- "0..*" Matrícula
Aluno "1" -- "0..*" Matrícula
Professor "0..*" -- "0..*" Disciplina
Disciplina "1" -- "1" Turma
@enduml
